crates/au-cli/tests/it/snapshots/it__scenarios__list-of-union-brand.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [],
  "instances": {
    "aborted_at_load": false,
    "count": 2,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 25,
                        "line_col": {
                          "end": {
                            "col": 26,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/list-of-union-brand/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "list-of-union-brand"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "list-of-union-brand"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/list-of-union-brand/.arsumbris/repo.yaml",
        "section_presence": null
      },
      {
        "body_events": [],
        "claim": [
          "log"
        ],
        "closure": [
          "log"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "values",
            "origins": [
              {
                "name": "log",
                "origin_path": "<root>/scenarios/list-of-union-brand/type/log.type.yaml",
                "required": true,
                "shape": "quantity[]"
              }
            ],
            "required": true,
            "shape": "quantity[]"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 35,
                        "line_col": {
                          "end": {
                            "col": 14,
                            "line": 4
                          },
                          "start": {
                            "col": 5,
                            "line": 4
                          }
                        },
                        "start": 26
                      },
                      "file": "<root>/scenarios/list-of-union-brand/readings.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "brand": "meter",
                      "kind": "scalar",
                      "value": 42
                    }
                  }
                ],
                "value": {
                  "brand": "meter",
                  "kind": "scalar",
                  "value": 42
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 49,
                        "line_col": {
                          "end": {
                            "col": 14,
                            "line": 5
                          },
                          "start": {
                            "col": 5,
                            "line": 5
                          }
                        },
                        "start": 40
                      },
                      "file": "<root>/scenarios/list-of-union-brand/readings.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "brand": "second",
                      "kind": "scalar",
                      "value": 9
                    }
                  }
                ],
                "value": {
                  "brand": "second",
                  "kind": "scalar",
                  "value": 9
                }
              },
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 63,
                        "line_col": {
                          "end": {
                            "col": 14,
                            "line": 6
                          },
                          "start": {
                            "col": 5,
                            "line": 6
                          }
                        },
                        "start": 54
                      },
                      "file": "<root>/scenarios/list-of-union-brand/readings.md"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "brand": "meter",
                      "kind": "scalar",
                      "value": 30
                    }
                  }
                ],
                "value": {
                  "brand": "meter",
                  "kind": "scalar",
                  "value": 30
                }
              }
            ],
            "field": "values"
          }
        ],
        "file": "<root>/scenarios/list-of-union-brand/readings.md",
        "section_presence": null
      }
    ]
  }
}
