crates/au-cli/tests/it/snapshots/it__scenarios__location-filetype-body-conflict.snap
---
source: crates/au-cli/tests/it/scenarios.rs
expression: rendered
---
{
  "diagnostics": [
    {
      "code": "location-filetype-body-conflict",
      "message": "`location.fileType: yaml` conflicts with a non-empty `body:` on 'report'; a body forces markdown, so no instance can be yaml",
      "severity": "error",
      "span": {
        "file": "<root>/scenarios/location-filetype-body-conflict/type/report.type.yaml",
        "line_col": {
          "end": {
            "col": 17,
            "line": 4
          },
          "start": {
            "col": 13,
            "line": 4
          }
        },
        "range": {
          "end": 51,
          "start": 47
        }
      }
    }
  ],
  "instances": {
    "aborted_at_load": false,
    "count": 1,
    "entries": [
      {
        "body_events": null,
        "claim": [
          "au.engine.repo::au-engine"
        ],
        "closure": [
          "au.engine.repo::au-engine"
        ],
        "effective_shape": [
          {
            "divergent": false,
            "field": "deps",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "au.engine.dep::au-engine[]"
              }
            ],
            "required": false,
            "shape": "au.engine.dep::au-engine[]"
          },
          {
            "divergent": false,
            "field": "description",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "name",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": true,
                "shape": "String"
              }
            ],
            "required": true,
            "shape": "String"
          },
          {
            "divergent": false,
            "field": "remote",
            "origins": [
              {
                "name": "au.engine.repo",
                "origin_path": "<au-engine-builtin>/au.engine.repo.type.yaml",
                "repo": "au-engine",
                "required": false,
                "shape": "String"
              }
            ],
            "required": false,
            "shape": "String"
          }
        ],
        "effective_values": [
          {
            "containers": [
              {
                "contributions": [
                  {
                    "location": {
                      "byte_range": {
                        "end": 37,
                        "line_col": {
                          "end": {
                            "col": 38,
                            "line": 1
                          },
                          "start": {
                            "col": 7,
                            "line": 1
                          }
                        },
                        "start": 6
                      },
                      "file": "<root>/scenarios/location-filetype-body-conflict/.arsumbris/repo.yaml"
                    },
                    "section_path": [],
                    "surface": "frontmatter",
                    "value": {
                      "kind": "scalar",
                      "value": "location-filetype-body-conflict"
                    }
                  }
                ],
                "value": {
                  "kind": "scalar",
                  "value": "location-filetype-body-conflict"
                }
              }
            ],
            "field": "name"
          }
        ],
        "file": "<root>/scenarios/location-filetype-body-conflict/.arsumbris/repo.yaml",
        "section_presence": null
      }
    ]
  }
}
